<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quran Majeed</string>
    <string name="app_description" translatable="false">Quran Majeed</string>
    <string name="share_kalma">Share Kalma</string>
    <string name="action_settings">Settings</string>
    <string name="time_for">Time for %s prayer</string>
    <string name="time_in">In %s at %s</string>
    <string name="time_up">It is %s time since </string>
    <string name="time_to_next">Next prayer in </string>
    <string name="time_interval" translatable="false">%2d h, %2d m and %2d s</string>
    <string name="time_interval_rounded" translatable="false">%2d h and %2d m</string>
    <string name="time_interval_0h" translatable="false">%2d m and %2d s</string>
    <string name="downloading_downloading">Downloading . . .</string>
    <string name="qurantp_download">Download</string>
    <string name="downloading_complete">Downloading Complete</string>
    <string name="kalma_audio">Kalam Audio</string>
    <string name="server_link" translatable="false">https://github.com/Tpiano14/Moslem/raw/main/</string>
    <string name="translation_server_link" translatable="false">https://github.com/Tpiano14/Moslem/raw/main/translations/</string>
    <string name="kalma_server_link" translatable="false">https://github.com/Tpiano14/Moslem/raw/main/kalmas/kalma_</string>
    <string name="text_text_and_translations">Select Quran Translation</string>
    <string name="delete_translation_message">Are you sure you want to delete this translation ?</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="arabic_text_error_message">Please enter Arabic only</string>
    <string name="time_interval_0h_rounded" translatable="false">%2d m</string>
    <string name="kalam_title" translatable="false">06 Kalmas</string>
    <string name="stop_athan">Stop Athan</string>
    <string name="close_notification">Close</string>
    <string name="set_location">Tap here to set location</string>
    <string name="zero_hour" translatable="false">00:00</string>
    <string name="square" translatable="false">\u25A0</string>
    <string name="qibla_notic">Note: you might need to move the device in a circular motion to reset the compass</string>
    <string name="qibla_direction">Qibla direction from North:</string>
    <string name="mt_val" translatable="false">μT</string>
    <string name="mag_field" translatable="false">mag.field</string>
    <string name="n" translatable="false">N</string>
    <string name="e" translatable="false">E</string>
    <string name="s" translatable="false">S</string>
    <string name="w" translatable="false">W</string>
    <string name="ne" translatable="false">NE</string>
    <string name="se" translatable="false">SE</string>
    <string name="sw" translatable="false">SW</string>
    <string name="nw" translatable="false">NW</string>
    <string name="magnetic_field2" translatable="false">Magnetic field: %1$d %2$s</string>
    <string name="accuracy">accuracy</string>
    <string name="accuracy3">Accuracy: %s</string>
    <string name="about_us">Ever wanted to motivation in your life ? If yes, then this app will help you to get motivated at every point of your life with it largest collection of best Islamic Utilities.</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="error">Error</string>
    <string name="unable_to_init_sensor">Unable to initialize sensors for Compass.</string>
    <string name="btn_ok">OK</string>
    <string name="acceleration">acceleration</string>
    <string name="orientation">orientation</string>
    <string name="wind_meager" translatable="false">m/s</string>
    <string name="accuracy_unreliable">unreliable</string>
    <string name="accuracy_low">low</string>
    <string name="accuracy_medium">medium</string>
    <string name="accuracy_high">high</string>
    <string name="need_calibration">The compass needs to be calibrated.  Rotate the phone repeating figure eight until the calibration is complete.</string>
    <string name="fajrar">الفجر</string>
    <string name="dhuhrar">الظهر</string>
    <string name="asrar">العصر</string>
    <string name="maghribar">المغرب</string>
    <string name="ishaar">العشاء</string>
    <string name="fajr">Fajr</string>
    <string name="shuruk">Sunset</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="jumu3a">Jumuaa</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="tahajjud">Tahajjud</string>
    <string name="nextfajr">Next fajr</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_language">Language</string>
    <string-array name="pref_language_list_titles">
        <item>Follow device settings</item>
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>--</item>
        <item>ar</item>
        <item>en</item>
    </string-array>
    <string name="pref_language_default_value" translatable="false">--</string>
    <string name="pref_title_numerals">Numerals</string>
    <string-array name="pref_numerals_list_titles">
        <item>Follow location</item>
        <item>Arabic</item>
        <item>Arabic Eastern</item>
    </string-array>
    <string-array name="pref_numerals_list_values">
        <item>CC</item>
        <item>DZ</item>
        <item>EG</item>
    </string-array>
    <string name="pref_numerals_default_value" translatable="false">CC</string>
    <string name="get_started">Get Started</string>
    <string name="fetching">Fetching current location</string>
    <string name="grant_all">Grant All</string>
    <string name="about_permissions">Required Permissions</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="duhr">Duhr</string>
    <string name="asar">Asar</string>
    <string name="prayer_time">Prayers Time</string>
    <string name="gregorian_date">Today\'s Date:</string>
    <string name="islamic_date">Islamic:</string>
    <string name="settings">Settings</string>
    <string name="time_formats">Time formats</string>
    <string name="calculation_methods">Calculation methods</string>
    <string name="juristic_methods">Juristic methods</string>
    <string name="adjusting_methods">Adjusting methods</string>
    <string name="pref_title_about">About</string>
    <string name="pref_txt_about" translatable="false">
Athan Bilal is a free software released under the GNU General Public License version 3.0.
It uses prayer time calculation code from the Islamic Tools Library released by the Arab Eyes project.
Its source is available at github.com/cdjalel/Bilal.\n
\n
Athan Bilal contains the coordinates of 23784 cities around the world, extracted from the geoname.org
site under the Creative Commons Attribution 4.0 License.\n
\n
The background image was designed by Freepick and licensed via www.freepick.com.\n
\n
There might be a slight difference between prayer times displayed here
and the real times adopted by the mosques in your city. In such case, please try:\n
- first to configure the right calculation method in the location settings.\n
- Next, if your town/commune is very close to a big city, try to use its name instead in location settings.\n
- Otherwise, send the name of your city (both in english and your local language), its exact
coordinates (latitude, longitude and altitude) and its prayer time calculation method to our address:
athan.bilal1@gmail.com, so we can fix it.
    </string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_prayer_time">Prayer time</string>
    <string name="pref_title_athan">Athan</string>
    <string name="pref_title_muezzin">Muezzin</string>
    <string-array name="pref_muezzin_list_titles">
        <item>Abdulbaset Abdesamad (Egypt)</item>
        <item>Ali Mullah (Mecca)</item>
        <item>Naser Alqatami (Al-Riyadh)</item>
        <item>Abdulmajeed Aserehy (Al-Madinah)</item>
        <item>İsmail Coşar (Turkey)</item>
        <item>Kefah Issa (Palestine)</item>
        <item>Riad Aït-Hamou (Algeria)</item>
    </string-array>
    <string-array name="pref_muezzin_list_values">
        <item>ABDELBASET</item>
        <item>ALIMULLA</item>
        <item>ALQATAMI</item>
        <item>ASEREHY</item>
        <item>JOSHAR</item>
        <item>KEFAH</item>
        <item>RIAD</item>
    </string-array>
    <string name="select_muezzin">Select muezzin %1$s?</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_city">Search city</string>
    <string name="pref_header_locations">Location</string>
    <string name="pref_title_search_city">City</string>
    <string name="pref_undefined_city">Undefined</string>
    <string name="pref_title_method">Calculation method</string>
    <string-array name="pref_method_list_titles">
        <item>Muslim World League</item>
        <item>Egyptian Survey Authority</item>
        <item>Umm Al-Qurra University</item>
        <item>Karachi Univ. of Islamic Sciences</item>
        <item>Islamic Society of North America</item>
        <item>Union of Islamic Org. in France</item>
        <item>Kuwait Ministry of Awqaf</item>
    </string-array>
    <string-array name="pref_method_list_values">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string name="pref_title_mathhab_hanafi">Mathhab Hanafi</string>
    <string name="pref_description_mathhab_hanafi">Follow Mathhab Hanafi for Asr time</string>
    <string name="internetfirst">Internet required</string>
    <string name="pref_title_round">Rounding seconds</string>
    <string name="nissab">Imposter: </string>
    <string name="goldsilver">To measure the price of gold or silver that you own for more than a year, you must calculate its price per 10 grams in your local currency. Each type of gold that you own must be added (according to karat) separately due to the difference in their value.</string>
    <string name="internet">INTERNET</string>
    <string name="internet_permission">This permission deals with internet related tasks.</string>
    <string name="access_coarse">ACCESS_COARSE_LOCATION</string>
    <string name="access_coarse_permission">Allows the API to use WiFi or mobile cell data (or both) to determine the device\'s location. The API returns the location with an accuracy approximately equivalent to a city block.</string>
    <string name="access_fine">ACCESS_FINE_LOCATION</string>
    <string name="access_fine_permission">In order to use Wi-Fi P2P for files sharing, official android documentation suggests to add this permission for connection.</string>
    <string name="quransp_auto_scroll">Auto Scroll</string>
    <string name="quransp_keep_screen_on_while_reading">Keep Screen On While Reciting</string>
    <string name="quransp_at_the_end_of_surah">At The End Of Surah</string>
    <string name="quransp_repeat_each_verse">Repeat Each Verse</string>
    <string name="quransp_reciters">Reciters</string>
    <string name="quransp_quran_reciter1">Abdul Reham Al-Sudais</string>
    <string name="quransp_quran_reciter2">Mishari Rashid Al- Afasy</string>
    <string name="quransp_quran_reciter3">Saad Al-Ghaamdi</string>
    <string name="quransp_stop_playing">Stop Playing</string>
    <string name="quransp_repeat_the_surah">Repeat The Surah</string>
    <string name="quransp_play_the_next_surah">Play The Next Surah</string>
</resources>